--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap Buttons</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <button id="button-1" class="btn btn-primary">Button 1</button>
+    <button id="button-2" class="btn btn-secondary">Button 2</button>
+    <button id="button-3" class="btn btn-success">Button 3</button>
+    <button id="button-4" class="btn btn-danger">Button 4</button>
+    <button id="button-5" class="btn btn-warning btn-lg btn-block">Button 5</button>
+    <button id="button-6" class="btn btn-info">Button 6</button>
+    <button id="button-7" class="btn btn-light">Button 7</button>
+    <button id="button-8" class="btn btn-dark">Button 8</button>
+  </div>
 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
